BUG: Double scrollbar in ESRI flyouts that are tall.
QA: Create an ESRI flyout with like 20 columns in it.
Make sure the flyout only has one scrollbar.

--- a/app/styles/screen-map.sass
+++ b/app/styles/screen-map.sass
@@ -71,6 +71,7 @@
     margin-top: 0
 
 .mapInfoContainer
+  height: 100%
   max-height: 20em
   max-width: 25em
   min-width: 15em
